Gemaakt met Colaboratory

--- a/Techionista.ipynb
+++ b/Techionista.ipynb
@@ -6,6 +6,7 @@
       "name": "Techionista.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "authorship_tag": "ABX9TyOq9U+vNUu4twkMNbGq5Lgc",
       "include_colab_link": true
     },
@@ -68,7 +69,7 @@
       "metadata": {
         "id": "P7ae5TjGofIi"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -92,15 +93,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f026c8a2-1fe6-4b26-e956-a9c78081032d"
+        "outputId": "9244870d-0747-4309-9bd7-839b711933c0"
       },
-      "execution_count": 1,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/gdrive\n"
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
           ]
         }
       ]
@@ -115,7 +116,7 @@
       "metadata": {
         "id": "p5r1d6DtpjFK"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
